--- a/config/consul.service
+++ b/config/consul.service
@@ -6,9 +6,7 @@ After=network-online.target
 
 [Service]
 Type=notify
-User=consul
-Group=consul
-ExecStart=/usr/local/bin/consul agent -config-dir=/etc/consul.d/
+ExecStart=/usr/local/bin/consul agent -config-dir /etc/consul.d
 ExecReload=/bin/kill --signal HUP $MAINPID
 KillMode=process
 KillSignal=SIGTERM
