--- a/.github/workflows/build_image.yml
+++ b/.github/workflows/build_image.yml
@@ -9,12 +9,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: Hello world action
+    - name: Run a one-line script
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
-    - name: Run a one-line script
       run: |
-        cd ./build
+        cd $GITHUB_WORKSPACE/build
         packer build ./packer.json
