--- a/config/nomad-client.json.template
+++ b/config/nomad-client.json.template
@@ -1,9 +1,9 @@
 {
   "data_dir": "/opt/nomad/client",
   advertise {
-    http = "$${IP_ADDR}:4746"
-    rpc  = "$${IP_ADDR}:4747"
-    serf = "$${IP_ADDR}:4748"
+    http: "$${IP_ADDR}:4746",
+    rpc: "$${IP_ADDR}:4747",
+    serf: "$${IP_ADDR}:4748"
   },
   "client": {
     "enabled": true
