--- a/config/nomad-client.json.template
+++ b/config/nomad-client.json.template
@@ -1,6 +1,6 @@
 {
   "data_dir": "/opt/nomad/client",
-  advertise {
+  "advertise": {
     http: "$${IP_ADDR}:4746",
     rpc: "$${IP_ADDR}:4747",
     serf: "$${IP_ADDR}:4748"
