--- a/config/nomad-client.service
+++ b/config/nomad-client.service
@@ -6,7 +6,7 @@ After=network-online.target
 
 [Service]
 ExecReload=/bin/kill -HUP $MAINPID
-ExecStart=/usr/local/bin/nomad agent -config /etc/nomad-client.d
+ExecStart=/usr/local/bin/nomad agent -config /etc/nomad-client.d/
 KillMode=process
 KillSignal=SIGINT
 LimitNOFILE=infinity
@@ -14,7 +14,6 @@ LimitNPROC=infinity
 Restart=on-failure
 RestartSec=2
 StartLimitBurst=3
-StartLimitIntervalSec=10
 TasksMax=infinity
 
 [Install]
